src/objects/Recall__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used as part of Recall Vehicle to link Recall with Account and to show it as a related list on Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Recall/Campaign</relationshipLabel>
        <relationshipName>Recall_Campaign</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_Type__c</fullName>
        <description>This field is used as part of Recall Vehicle to capture the Campaign Type details</description>
        <label>Campaign Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <description>This field is used as part of Recall Vehicle to capture the Completion Date</description>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_By_EP_Transaction__c</fullName>
        <description>Contains the EP transaction ID which created this record</description>
        <label>Created By EP Transaction</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Damage_Code__c</fullName>
        <description>This field is used as part of Recall vehicle to capture the Damage Code</description>
        <label>Damage Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EP_Parent_Transaction__c</fullName>
        <description>Used to identify all records updated by a single data load or specific data load</description>
        <label>EP Parent Transaction</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Working_Hours__c</fullName>
        <description>This field is used as part of Recall Vehicle to capture the Estimated Working Hours</description>
        <label>Estimated Working Hours</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MD__c</fullName>
        <defaultValue>IF(ISPICKVAL($User.Market__c, &apos;AU&apos;) ,&apos;AU&apos;, 
		IF(ISPICKVAL($User.Market__c, &apos;CN&apos;), &apos;CN&apos;, 
		IF(ISPICKVAL($User.Market__c, &apos;JP&apos;), &apos;JP&apos;,&apos;NA&apos;)))</defaultValue>
        <description>For JP users set to JP</description>
        <label>Market discriminator</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recall_Class__c</fullName>
        <label>Recall Class</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recall_Date__c</fullName>
        <label>Recall Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recall_No__c</fullName>
        <label>Recall No</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recall_Reason__c</fullName>
        <label>Recall Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recall_Type__c</fullName>
        <label>Recall Kind</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Updated_By_EP_Transactions__c</fullName>
        <label>Updated By EP Transactions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <label>VIN</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_ID__c</fullName>
        <label>Vehicle ID</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Recalls</relationshipLabel>
        <relationshipName>Recalls</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Vehicle_Registration_Number__c</fullName>
        <description>This field is used as part of Recall Vehicle to capture the Vehicle registration Number from Vehicle object</description>
        <formula>Vehicle_ID__r.RegistrationNo__c</formula>
        <label>Vehicle Registration Number</label>
        <type>Text</type>
    </fields>
    <label>Recall</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Today_s_Recall</fullName>
        <columns>NAME</columns>
        <columns>Recall_Date__c</columns>
        <columns>Recall_Reason__c</columns>
        <columns>Vehicle_ID__c</columns>
        <columns>VIN__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Recall</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RC-{0000000000}</displayFormat>
        <label>Recall ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recalls</pluralLabel>
    <recordTypes>
        <fullName>Campaign</fullName>
        <active>true</active>
        <description>This recordtype is used to capture the Campaign Vehicle information</description>
        <label>Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>Recall</fullName>
        <active>true</active>
        <description>This recordtype is used to capture the Recall Vehicle information</description>
        <label>Recall</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>